add menu and snake demo
fix bug regarding when snake death

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,11 @@ canvas {
     border: 4px solid rgb(37, 93, 136);
 }
 
+#menu {
+    position: absolute;
+    background-color: black;
+}
+
 body {
     background-color: rgb(27, 62, 88);
 }
