add button memory, remove SnakeColors type, add start instructions

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,11 +23,6 @@ p {
     font-size: 140%;
 }
 
-#options p {
-    font-weight: 900;
-    font-size: 190%;
-}
-
 #playerNumOptions button, #difficultyOptions button, #gridSizeOptions button {
     width: 10%;
     margin: 0 2% 0 2%;
@@ -52,36 +47,41 @@ button {
     box-shadow: 2px 4px #255D88, 1.5px 3px #255D88, 1px 2px #255D88, .5px 1px #255D88;
 }
 
-.red:hover {
+.red:hover, .red.selected {
     background-color: #B30000;
 }
 
-.orange:hover {
+.orange:hover, .orange.selected {
     background-color: #B36B00;
 }
 
-.yellow:hover {
+.yellow:hover, .yellow.selected {
     background-color: #B3B300;
 }
 
-.green:hover {
+.green:hover, .green.selected {
     background-color: #33CC00;
 }
 
-.blue:hover {
+.blue:hover, .blue.selected {
     background-color: #0000B3;
 }
 
-.purple:hover {
+.purple:hover, .purple.selected {
     background-color: #4D0099;
 }
 
-button:hover {
-    background-color: rgb(23, 52, 75);
-    border-color: rgb(67, 118, 156);
+button:hover, .selected {
+    background-color: #112233;
+    border-color: #43769C;
 }
 
-button:active {
+button:active, .selected {
     box-shadow: 1px 3px #1B3E58, .5px 1.5px #1B3E58;
     transform: translate(1px, 2px);
+}
+
+.random {
+    transform: translate(0, 0);
+    box-shadow: 2px 4px #255D88, 1.5px 3px #255D88, 1px 2px #255D88, .5px 1px #255D88;
 }
