--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,13 @@
-canvas {
+canvas, #menu, #pause {
     position: absolute;
+}
+
+canvas {
     border: 4px solid #255D88;
 }
 
-#menu {
-    position: absolute;
+#pause {
+    z-index: 2;
 }
 
 div, p {
@@ -21,6 +24,12 @@ body {
 p {
     font-weight: 700;
     font-size: 140%;
+}
+
+#pause p {
+    font-weight: 900;
+    font-size: 250%;
+    top: 0;
 }
 
 #playerNumOptions button, #difficultyOptions button, #gridSizeOptions button {
